--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     
-    <!-- <link rel="stylesheet" href="assets/vendors/themify-icons/themify-icons.css"> -->
-    <!-- <link rel="stylesheet" href="assets/vendors/nice-select/nice-select.css"> -->
+    <link rel="stylesheet" href="assets/vendors/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="assets/vendors/nice-select/nice-select.css">
     <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css">
 </head>
