--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,20 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     
     <link rel="stylesheet" href="assets/vendors/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="assets/vendors/nice-select/nice-select.css">
+    <!-- <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.min.css"> -->
+    <!-- 
     <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css"> -->
 </head>
 <body>
     <app-root></app-root>
 
-    <!-- <script src="assets/vendors/jquery/jquery-3.2.1.min.js"></script>
-    <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendors/jquery/jquery-3.2.1.min.js"></script>
+    <script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
+
+    <!-- <script src="assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="assets/vendors/skrollr.min.js"></script>
     <script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendors/nice-select/jquery.nice-select.min.js"></script>
     <script src="assets/vendors/jquery.ajaxchimp.min.js"></script>
     <script src="assets/vendors/mail-script.js"></script>
     <script src="assets/js/main.js"></script>
@@ -31,5 +33,19 @@
         
         gtag('config', 'UA-23581568-13');
     </script> -->
+
+    <script>
+        $(function() {
+            "use strict";
+            $(".s_Product_carousel").owlCarousel({
+                items: 1,
+                autoplay: false,
+                autoplayTimeout: 5000,
+                loop: true,
+                nav: false,
+                dots: false
+            });
+        });
+    </script>
 </body>
 </html>
